Fixed paragraph spacing

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ background-size: cover;}
 
 /* Sticky footer styles
 -------------------------------------------------- */
-h5 {
+h4 {
 	line-height: 18px;
 	margin-top: 0px;
     margin-bottom: 20px;
